<resources>
    <string name="app_name">Gomap-gl-native-android</string>
    <string name="category">category</string>

    <string name="description_poi_list">Search Nearby Poi List</string>
    <string name="description_press_for_marker">Add marker to map on long press</string>
    <string name="activity_poi_list">Nearby Poi List</string>

    <string name="activity_search_poi_list">Search Poi</string>
    <string name="description_search_poi_list">Search Poi as keyword</string>

    <string name="activity_press_for_marker">Press Map For Marker</string>
    <string name="activity_simple_map">Simple Map</string>

    <string name="activity_routeline">Route-line</string>
    <string name="activity_polyline">Polyline</string>
    <string name="activity_line">Line Layer</string>
    <string name="activity_line_change">Line Layer Change</string>
    <string name="activity_camera_animation_types">Animation Types</string>
    <string name="activity_location_fragment">Location Fragment</string>
    <string name="activity_infowindow_adapter">Custom InfoWindow</string>
    <string name="activity_animated_symbollayer">Animated SymbolLayer</string>
    <string name="activity_snapshot">Snapshot Activity</string>
    <string name="activity_map_snapshotter_bitmap_overlay">Map Snapshot with bitmap overlay</string>
    <string name="activity_symbol_layer">Symbols</string>
    <string name="title_symbol_change">Change Symbol</string>
    <string name="title_fill">Fill</string>
    <string name="title_fill_change">Change Fill</string>
    <string name="title_circle">Circle</string>
    <string name="title_symbol_press">Press for Symbol</string>
    <string name="title_places_autocomplete">Places Autocomplete</string>
    <string name="title_places_autocomplete_fragment">Places Autocomplete Fragment</string>
    <string name="title_place_picker">Place picker</string>
    <string name="activity_heatmaplayer">Heatmap layer</string>
    <string name="activity_basic_location_pulsing_circle">Basic Pulsing Circle Activity</string>
    <string name="activity_customized_location_pulsing_circle">Customized Pulsing Circle Activity</string>
    <string name="activity_location_modes">Location Modes Activity</string>
    <string name="activity_location_map_change">Simple Location Layer</string>

    <string name="category_annotation">Annotation</string>
    <string name="category_poi">Poi</string>
    <string name="category_basic">_Basic</string>
    <string name="category_route">Route</string>
    <string name="category_location">Location</string>
    <string name="category_camera">Camera</string>
    <string name="category_infowindow">Info Window</string>
    <string name="category_style">Styling</string>
    <string name="category_snapshot">snapshot</string>

    <string name="button_camera_move">Move</string>
    <string name="button_camera_ease">Ease</string>
    <string name="button_camera_animate">Animate</string>

    <string name="navigation">Navigation</string>
    <string name="navigation_demo">Navigation Demo</string>
    <string name="description_along_the_way">Along the way demo</string>

    <string name="description_camera_animation_types">Showcase the different animation types</string>
    <string name="description_polyline">Add a polyline to a map</string>
    <string name="description_line">Add a line to a map</string>
    <string name="description_line_change">line change</string>
    <string name="description_routeline">Add a route to a map</string>
    <string name="description_location_fragment">Uses LocationComponent in a Fragment</string>
    <string name="description_simple_map">Shows a simple map</string>
    <string name="description_info_window_adapter">Learn how to create a custom InfoWindow</string>
    <string name="description_animated_symbollayer">Animate the position change of a symbol layer</string>
    <string name="description_snapshot">Example to make a snapshot of the map</string>
    <string name="description_map_snapshotter_bitmap_overlay">Show how to add a bitmap overlay to a Snapshot</string>
    <string name="description_symbol_layer">Manipulate symbols at runtime</string>
    <string name="description_symbol_anim">symbols anim</string>
    <string name="description_symbol_press">Show a symbol by pressing the map</string>
    <string name="description_fill">Show fills on a map</string>
    <string name="description_fill_change">Show changing a fill on a map</string>
    <string name="description_circle">Show circles on a map</string>
    <string name="description_autocomplete">Launch the autocomplete activity.</string>
    <string name="description_autocomplete_fragment">Launch the autocomplete fragment inside an activity</string>
    <string name="description_place_picker">Launch the place picker activity and receive result</string>
    <string name="description_heatmaplayer">Use HeatmapLayer to visualise earthquakes</string>
    <string name="description_location_basic_pulsing_circle">Display the LocationComponent\'s default pulsing circle</string>
    <string name="description_location_customized_pulsing_circle">Display and customize the LocationComponent\'s pulsing circle</string>
    <string name="description_location_modes">Showcases location render and tracking modes</string>
    <string name="description_location_map_change">Change map\'s style while location is displayed</string>


    <string name="toggle_text_size">Toggle text size</string>
    <string name="toggle_text_field_contents">Toggle text field contents</string>
    <string name="toggle_text_font">Toggle text font</string>
    <string name="toggle_animate_symbol_layer">Animate symbol layer</string>
    <string name="toggle_animate_symbol_manager">Animate symbol manager</string>
    <string name="description_add_bulk_markers">Add Markers In Bulk to a Map</string>
    <string name="activity_add_bulk_markers">Add Markers In Bulk</string>
    <string-array name="search_type">
        <item>KeyWord</item>
        <item>Radius</item>
        <item>Type</item>
    </string-array>


    <!-- Place picker -->
    <string name="detailed_description_place_picker">Example shows how to launch the Place Picker using the Floating action button and receiving a result in onActivityResult.</string>
    <string name="reverse_geocoding_enabled">Reverse geocoding enabled</string>
    <string name="reverse_geocoding_disabled">Reverse geocoding disabled</string>
    <string name="user_location_button_enabled">User location button enabled</string>
    <string name="user_location_button_disabled">User location button disabled</string>
    <string name="route_planning">route planning</string>
    <string name="route_planning_avoid">route planning(avoid)</string>
    <string name="route_cancel">route cancel</string>
    <string name="start_navigation">start navigation</string>
    <string name="finish_navigation">finish navigation</string>
    <string name="change_route">change route</string>
    <string name="route_planning_more">route planning more</string>
    <string name="search_restaurant_along_the_way">Search restaurant along the way</string>
    <string name="search_shop_along_the_way">Search shop along the way</string>
    <string name="search_mall_along_the_way">Search mall along the way</string>

    <string name="description_visible_bounds">Center the camera around a bounds</string>
    <string name="activity_visible_coordinate_bounds">LatLngBounds Method</string>

    <string name="description_recyclerview_glsurfaceview">Show multiple GLSurfaceView MapViews as recyclerView items</string>
    <string name="activity_recyclerview_glsurfaceview">RecyclerView GLSurfaceView</string>
    <string name="category_integration">_Integration</string>

</resources>