<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.navigation.NavigationActivity">

    <com.gomap.sdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/ll_wrapper"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/route_planning" />

        <Button
            android:id="@+id/btn_route_avoid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_planning_avoid" />

        <Button
            android:id="@+id/btn_route_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_planning_more" />

        <Button
            android:id="@+id/btn_route_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_cancel" />
        <Button
            android:id="@+id/btn_start_navi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_navigation" />

        <Button
            android:id="@+id/btn_finish_navi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_navigation" />
        <Button
            android:id="@+id/btn_change_navi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_route" />


    </LinearLayout>

</RelativeLayout>